--- a/trabajos-practicos/tp-2/noticias-eco.html
+++ b/trabajos-practicos/tp-2/noticias-eco.html
@@ -110,7 +110,7 @@
 
     <main>
         <section id="nacional">
-            <h2>Deportes</h2>
+            <h2>Economía</h2>
             <article style="display: flex; align-items: flex-start; margin-bottom: 20px;">
                 <figure style="flex: 1; margin-right: 15px;">
                     <img src="./imgs/noticia7.jpeg" alt="Imagen de la noticia 1" style="max-width: 100%; height: auto; border-radius: 10px;">
