--- a/verificaciones.html
+++ b/verificaciones.html
@@ -53,7 +53,7 @@
                 </a>
             </p>
             <div class="validacion-w3c">
-            <img src="imgs/validacion-css.png" alt="Validación de verificaciones.html">
+            <img src="imgs/validacion-css.png" alt="Validación de estilos.css">
             </div>
         </section>
         <section>
